# LapTrinhC-De1

./: BackUp.cpp  CMakeLists.txt  ChiTietHD.cpp  HoaDon.cpp  KhachHang.cpp  README.md  RecoveryData.cpp  SanPham.cpp  main.cpp  temp.txt
backup/: backup_2024-04-09_20-37-44_SanPham.csv
data/: ChiTietHD.csv  HoaDon.csv
function/: BackUpMenu.cpp  CRUDfunction.cpp  function.cpp
include/: BackUp.h  BackUpMenu.h  CRUDfunction.h  ChiTietHD.h  HoaDon.h  KhachHang.h  RecoveryData.h  SanPham.h  function.h
